--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,15 @@
                 <div id="user-data">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" id="username" class="form-control" ngModel name="username">
+                        <input type="text" id="username" class="form-control" ngModel name="username" required>
+                        <!-- 'required' determines if field should be empty or not-->
                     </div>
                     <button class="btn btn-default" type="button">Suggest an Username</button>
                     <div class="form-group">
                         <label for="email">Mail</label>
-                        <input type="email" id="email" class="form-control" ngModel name="email">
+                        <input type="email" id="email" class="form-control" ngModel name="email" required email>
+                        <p *ngIf="">Please enter a valid value!</p>
+                        <!-- 'email' is directive provided by angular, makes sure its email validated -->
                     </div>
                 </div>
                 <div class="form-group">
@@ -22,7 +25,7 @@
             <option value="teacher">Your first teacher?</option>
           </select>
                 </div>
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
             </form>
         </div>
     </div>
