--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,17 +13,17 @@
                     <button class="btn btn-default" type="button">Suggest an Username</button>
                     <div class="form-group">
                         <label for="email">Mail</label>
-                        <input type="email" id="email" class="form-control" ngModel name="email" required email>
-                        <p *ngIf="">Please enter a valid value!</p>
+                        <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
+                        <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid value!</span>
                         <!-- 'email' is directive provided by angular, makes sure its email validated -->
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="secret">Secret Questions</label>
                     <select id="secret" class="form-control" ngModel name="secret">
-            <option value="pet">Your first Pet?</option>
-            <option value="teacher">Your first teacher?</option>
-          </select>
+                        <option value="pet">Your first Pet?</option>
+                        <option value="teacher">Your first teacher?</option>
+                    </select>
                 </div>
                 <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
             </form>
